# raspi-eye

./: .gitignore  requirements.txt
.kiro/hooks/: git-clean-check.kiro.hook  post-task-devlog.kiro.hook  pre-task-spec-check.kiro.hook  refresh-steering.kiro.hook  sync-shall-not.kiro.hook  vibe-trace.kiro.hook
.kiro/specs/spec-0-gstreamer-capture/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-1-spdlog-logging/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-10-ai-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/spec-11-s3-uploader/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-12-webrtc-signaling/: design.md  requirements.md  tasks.md
.kiro/specs/spec-13-webrtc-media/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-13.5-main-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-13.6-webrtc-peer-lifecycle-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/spec-13.7-signaling-reconnect-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/spec-14-webrtc-sdp-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/spec-15-adaptive-streaming/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-16-pipeline-cpu-optimization/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-16-shutdown-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/spec-17-sagemaker-endpoint/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-19-config-file/: design.md  requirements.md  tasks.md
.kiro/specs/spec-2-cross-compile/: design.md  requirements.md  tasks.md
.kiro/specs/spec-20-systemd-watchdog/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-22-pi-deploy/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-23-log-management/: design.md  requirements.md  tasks.md
.kiro/specs/spec-24-event-pipeline-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/spec-25-webrtc-log-observability/: design.md  requirements.md  tasks.md
.kiro/specs/spec-26-network-adaptive-bitrate/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-27-inat-data-collection/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-28-feature-space-cleaning/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-29-bird-classifier-training/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-3-h264-tee-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-30-inference-yolo-crop/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-31-inference-voting-threshold/: design.md  requirements.md  tasks.md
.kiro/specs/spec-4-camera-abstraction/: design.md  requirements.md  tasks.md
.kiro/specs/spec-4.5-camera-source-v2/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-5-pipeline-health/: design.md  requirements.md  tasks.md
.kiro/specs/spec-6-iot-provisioning/: design.md  requirements.md  tasks.md
.kiro/specs/spec-7-credential-provider/: design.md  requirements.md  tasks.md
.kiro/specs/spec-8-kvs-producer/: design.md  requirements.md  tasks.md
.kiro/specs/spec-9-yolo-detector/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/spec-9.5-onnx-arm-optimization/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: cpp-standards.md  product.md  shall-not.md  structure.md  tech.md
device/: CMakeLists.txt
device/cmake/: FindOnnxRuntime.cmake
device/config/: config.toml.example  kvs_log_configuration
device/src/: ai_pipeline_handler.cpp  ai_pipeline_handler.h  app_context.cpp  app_context.h  bandwidth_probe.cpp  bandwidth_probe.h  bitrate_adapter.cpp  bitrate_adapter.h  camera_source.cpp  camera_source.h  config_manager.cpp  config_manager.h  config_util.cpp  config_util.h  credential_provider.cpp  credential_provider.h  json_formatter.cpp  json_formatter.h  kvs_sink_factory.cpp  kvs_sink_factory.h  log_init.cpp  log_init.h  main.cpp  network_monitor.cpp  network_monitor.h  pipeline_builder.cpp  pipeline_builder.h  pipeline_health.cpp  pipeline_health.h  pipeline_manager.cpp  pipeline_manager.h  s3_uploader.cpp  s3_uploader.h  sd_notifier.cpp  sd_notifier.h  sdp_util.cpp  shutdown_handler.cpp  shutdown_handler.h  stream_mode_controller.cpp  stream_mode_controller.h  (+6 more)
device/tests/: ai_pipeline_test.cpp  bitrate_test.cpp  camera_test.cpp  config_test.cpp  credential_test.cpp  health_test.cpp  kvs_test.cpp  log_test.cpp  network_monitor_test.cpp  s3_test.cpp  s3_upload_order_test_helper.h  sd_notifier_test.cpp  shutdown_test.cpp  smoke_test.cpp  stream_mode_test.cpp  tee_test.cpp  webrtc_media_test.cpp  webrtc_test.cpp  yolo_test.cpp
docs/: architecture.drawio  development-trace.md  pi-setup.md  spec-backlog.md
model/: clean_features.py  deploy_endpoint.py  launch_processing.py  launch_training.py  predict.py  prepare_dataset.py  requirements.txt
model/cleaning/: clean_features.py  cleaner.py  cropper.py  feature_extractor.py  outlier_detector.py  requirements.txt
model/collection/: collector.py  verify_taxon_ids.py
model/config/: species.yaml
model/endpoint/: inference.py  packager.py  requirements.txt
model/lambda/: __init__.py  handler.py  species_cn.json
model/src/: cleaner.py  collector.py  config.py  cropper.py  feature_extractor.py  semantic_dedup.py  splitter.py  verify_taxon_ids.py
model/tests/: conftest.py  test_cleaner.py  test_config.py  test_cropper.py  test_endpoint.py  test_feature_cleaning.py  test_lambda.py  test_taxonomy.py  test_training.py
model/training/: augmentation.py  backbone_registry.py  classifier.py  evaluator.py  exporter.py  requirements.txt  train.py
scripts/: build-all.sh  create-sagemaker-role.sh  deploy-inference-pipeline.sh  download-model.sh  pi-build.sh  pi-deploy.sh  provision-device.sh  quantize-model.sh  raspi-eye.service
